# pixel-art-bench

./: .pre-commit-config.yaml  README.md  eval.py  lora_vs_base_eval.csv  pyproject.toml  quality.py  train.py
eval/: eval.yaml  pixel_art_task.py  scorers.py
export_results/: dataset_viz.py  export_results_hf_hub.py  export_source_results_hf_hub.py  export_yaml.py
export_results/eda_outputs/: eda_metrics.json  eligibility_assessment.json
plots/: plot_from_hf.py
train/: eval.py  train.py
